# gr-gym

./: .gitignore  README.md  main.py  module_gnuradio.py  utils.py
environment/: environment.yml
example/: model.py  model_obs_param.py  simpleagent.py  simpleagent_nn.py  simpleagent_nn_eval.py
example/agents/: .gitignore  SL_avg_GPR.ipynb  SL_avg_NN.ipynb  SL_obs.ipynb  agentAC.py  agentACfakeEnv.py  agentCNN.py  agentCNN_avg.py  agentCNN_avg_eval.py  agentConstant.py  agentEq.py  agentMAB.py  agentRL.py  agent_DQN_avg.py  agent_DQN_eval.py  agent_NN_RLsim.py  comlistener.py  model.py  model_avg.py  model_obs_param.py  model_param.py  record_model.py  timing_agent.py
example/agents/.ipynb_checkpoints/: SL_avg-checkpoint.ipynb  SL_avg_GPR-checkpoint.ipynb  SL_avg_NN-checkpoint.ipynb
example/agents/GPR/: agentGPR.py
example/agents/SL/: SL_avg_GPR.ipynb  SL_avg_NN.ipynb
example/agents/SL/.ipynb_checkpoints/: SL_avg_NN-checkpoint.ipynb
example/agents/eval/: plot_model_perf.py  plot_raw.py  plot_reward.py
example/grc/: .gitignore  ieee80211_wifi_loopback_shell.grc  ieee80211_wifi_loopback_w_fr_channel.grc  ieee80211_wifi_loopback_w_fr_channel.grc.orig  ieee80211_wifi_loopback_w_fr_channel_gui.grc
example/ieee802_11/: read.py  wifi_loopback.grc  wifi_loopback.py  wifi_loopback_w_fr_channel.grc
example/ieee802_11/gnuradio_blocks/: .gitignore  wifi_phy_hier.grc  wifi_phy_hier_fft.block.yml  wifi_phy_hier_fft.py
example/ieee802_11/gnuradio_blocks/gr-gnugym/: CMakeLists.txt  install.sh
example/ieee802_11/gnuradio_blocks/gr-gnugym/grc/: CMakeLists.txt  gnugym_gnugym_moving_average_vect.block.yaml  gnugym_gnugym_moving_average_vect.block.yml  gnugym_gnugym_moving_average_vect.xml  gnugym_gnugym_parse_seqnr.block.yaml  gnugym_gnugym_parse_seqnr.block.yml  gnugym_gnugym_parse_seqnr.xml  gnugym_gnugym_rssi_cb.block.yaml  gnugym_gnugym_rssi_cb.block.yml  gnugym_gnugym_rssi_cb.xml  gnugym_gnugym_snr_cb.block.yaml  gnugym_gnugym_snr_cb.block.yml  gnugym_gnugym_snr_cb.xml  gnugym_gnugym_snrdebug_ff.block.yaml  gnugym_gnugym_snrdebug_ff.block.yml
example/ieee802_11/gnuradio_blocks/gr-gnugym/lib/: CMakeLists.txt  constellations_impl.cc  gnugym_moving_average_vect_ff_impl.cc  gnugym_moving_average_vect_ff_impl.h  gnugym_parse_seqnr_impl.cc  gnugym_rssi_cb_impl.cc  gnugym_rssi_cb_impl.h  gnugym_snr_cb_impl.cc  gnugym_snr_cb_impl.h  gnugym_snrdebug_ff_impl.cc  gnugym_snrdebug_ff_impl.h
example/ieee802_11/gnuradio_blocks/gr-gnugym/swig/: CMakeLists.txt  gnugym_swig.i
example/ieee802_11/gnuradio_blocks/grgym/: CMakeLists.txt
example/ieee802_11/gnuradio_blocks/grgym/grc/: gnugym_gnugym_parse_seqnr.block.yml  gnugym_gnugym_rssi_cb.block.yml
example/ieee802_11/gnuradio_blocks/grgym/lib/: CMakeLists.txt  gnugym_moving_average_vect_ff_impl.cc  gnugym_moving_average_vect_ff_impl.h  gnugym_parse_seqnr_impl.cc  gnugym_parse_seqnr_impl.cc.orig  gnugym_rssi_cb_impl.cc  gnugym_snr_cb_impl.cc  gnugym_snr_cb_impl.h  gnugym_snrdebug_ff_impl.cc  gnugym_snrdebug_ff_impl.h
example/ieee802_11/gnuradio_blocks/grgym/python/: CMakeLists.txt  qa_gnugym_moving_average_vect_ff.py  qa_gnugym_parse_seqnr.py  qa_gnugym_rssi_cb.py  qa_gnugym_snr_cb.py  qa_gnugym_snrdebug_ff.py  qa_rssi_cb.py  qa_snr_cb.py
example/ieee802_11/gnuradio_blocks/grgym/swig/: CMakeLists.txt
examples/benchmark/: simple_bench_margot.yaml  simple_bench_pipe.yaml  simple_bench_zmq.yaml
examples/benchmark/agents/: simple_bechmark.py
examples/benchmark/grc/: simple_benchmark.py  simple_benchmark_pipe.grc  start_gr_bench.sh
examples/example/agents/: agent_NN_RLsim.py
examples/example/grc/: .gitignore  ieee80211_wifi_loopback_w_fr_channel.grc
examples/rl-wifi-rt/: bench.yaml  bench_pipe.yaml  bench_zmq.yaml  bench_zmq_remote.yaml  config.yaml  simple_bench_zmq.yaml
examples/rl-wifi-rt/agents/: .gitignore  agentAC.py  agentACfakeEnv.py  agentEq.py  agentMAB.py  agentRL.py  agent_DQN_avg.py  benchmark.py  utils.py
examples/rl-wifi-rt/agents/results/agent_ac/: raw.csv
examples/rl-wifi-rt/gr-grgym-ieee802-11/: wifi_phy_hier_fft.grc
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/: .gitignore  CMakeLists.txt  MANIFEST.md
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/include/gnuradio/gnugym/: CMakeLists.txt  api.h  calculateTxDuration.h  gnugym_snr_cb.h
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/lib/: CMakeLists.txt  calculateTxDuration_impl.cc  calculateTxDuration_impl.h  constellations_impl.h  gnugym_msg_src_impl.cc  gnugym_msg_src_impl.h  gnugym_parse_seqnr_impl.cc.orig  gnugym_rssi_cb_impl.h  qa_gnugym.cc  test_gnugym.cc
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/lib/equalizer/: base.h  comb.h  comb.h.orig  lms.cc.orig  lms.h.orig  sta.cc.orig  sta.h
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/python/bindings/: CMakeLists.txt  calculateTxDuration_python.cc  gnugym_snr_cb_python.cc  gnugym_snrdebug_ff_python.cc  python_bindings.cc
examples/rl-wifi-rt/gr-grgym-ieee802-11/grgym/python/bindings/docstrings/: calculateTxDuration_pydoc_template.h
examples/rl-wifi-rt/grc/: benchmark_ieee80211_wifi_loopback_fpipe.grc  benchmark_ieee80211_wifi_loopback_zmq.grc  benchmark_ieee80211_wifi_loopback_zmq_remote.grc  ieee80211_wifi_loopback_w_fr_channel.grc  ieee80211_wifi_loopback_w_fr_channel_gui.grc  simple_benchmark.grc  start_benchmark_ieee80211_wifi_loopback_zmq.sh
gnuRadio_env/: __init__.py  gnuRadio_env.py  gr_bridge.py  gr_env.py  setup.py
gnuRadio_env/grgym/envs/: gnu_case.py  gr_bridge.py  gr_env.py  gr_utils.py
grgym/: setup.py  setup.py.orig
grgym/gnuRadio_env/: setup.py
grgym/gnuRadio_env/grgym/: __init__.py
grgym/grgym/: __init__.py  __init__.py.orig
grgym/grgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grgym/grgym/envs/: __init__.py  gnu_case.py  gnu_case.py.orig  gr_bridge.py  gr_bridge.py.orig  gr_env.py  gr_env.py.orig  gr_scenario.py  gr_utils.py
grgym/grgym/scenarios/: benchmark.py  ieee80211p_scenario.py  ieee80211p_scenario.py.orig
paper/benchmark/: plot_bench.py
params/: config.yaml  ieee80211p.yaml  rpc.yml
(+102 files in other folders)
